--- a/assets/coffe-banner.css
+++ b/assets/coffe-banner.css
@@ -63,6 +63,11 @@
 }
 
 @media (max-width: 768px) {
+
+  .image-container {
+    display: none;
+  }
+
   .content {
     max-width: 95%;
     display: flex;
